[package]
name = "elf_loader_scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binread = "2.2.0"
libc = "0.2.134"
nix = {version="0.25.0", features=['process','mman']}
#syscalls = {version = "0.6.6", features=['x86_64']}
